remove dozer dependency