@@ -1,17 +1,16 @@
 package com.kopever.framework.common.util;
 
-import jakarta.xml.bind.DatatypeConverter;
-
 import javax.crypto.BadPaddingException;
 import javax.crypto.Cipher;
 import javax.crypto.IllegalBlockSizeException;
 import javax.crypto.NoSuchPaddingException;
 import javax.crypto.spec.IvParameterSpec;
 import javax.crypto.spec.SecretKeySpec;
-import java.io.UnsupportedEncodingException;
+import java.nio.charset.StandardCharsets;
 import java.security.InvalidAlgorithmParameterException;
 import java.security.InvalidKeyException;
 import java.security.NoSuchAlgorithmException;
+import java.util.Base64;
 
 public class AESUtil {
 
@@ -19,21 +18,18 @@ public class AESUtil {
 
     private static final String AES_ALGORITHM = "AES";
 
-    private static final String AES_ENCODING = "UTF-8";
-
     public static String encrypt(String value, String secret, String vector) throws
             NoSuchPaddingException,
             NoSuchAlgorithmException,
             InvalidAlgorithmParameterException,
             InvalidKeyException,
             BadPaddingException,
-            IllegalBlockSizeException,
-            UnsupportedEncodingException {
+            IllegalBlockSizeException {
         Cipher cipher = Cipher.getInstance(AES_CIPHER);
-        SecretKeySpec skeySpec = new SecretKeySpec(secret.getBytes(AES_ENCODING), AES_ALGORITHM);
-        IvParameterSpec iv = new IvParameterSpec(vector.getBytes(AES_ENCODING));
+        SecretKeySpec skeySpec = new SecretKeySpec(secret.getBytes(StandardCharsets.UTF_8), AES_ALGORITHM);
+        IvParameterSpec iv = new IvParameterSpec(vector.getBytes(StandardCharsets.UTF_8));
         cipher.init(Cipher.ENCRYPT_MODE, skeySpec, iv);
-        return DatatypeConverter.printBase64Binary(cipher.doFinal(value.getBytes(AES_ENCODING)));
+        return Base64.getEncoder().encodeToString(cipher.doFinal(value.getBytes(StandardCharsets.UTF_8)));
     }
 
     public static String decrypt(String encrypted, String secret, String vector) throws
@@ -42,13 +38,12 @@ public class AESUtil {
             InvalidAlgorithmParameterException,
             InvalidKeyException,
             BadPaddingException,
-            IllegalBlockSizeException,
-            UnsupportedEncodingException {
+            IllegalBlockSizeException {
         Cipher cipher = Cipher.getInstance(AES_CIPHER);
-        SecretKeySpec skeySpec = new SecretKeySpec(secret.getBytes(AES_ENCODING), AES_ALGORITHM);
-        IvParameterSpec iv = new IvParameterSpec(vector.getBytes(AES_ENCODING));
+        SecretKeySpec skeySpec = new SecretKeySpec(secret.getBytes(StandardCharsets.UTF_8), AES_ALGORITHM);
+        IvParameterSpec iv = new IvParameterSpec(vector.getBytes(StandardCharsets.UTF_8));
         cipher.init(Cipher.DECRYPT_MODE, skeySpec, iv);
-        return new String(cipher.doFinal(DatatypeConverter.parseBase64Binary(encrypted)), AES_ENCODING);
+        return new String(cipher.doFinal(Base64.getDecoder().decode(encrypted)), StandardCharsets.UTF_8);
     }
 
 }
